--- a/to - do - list/index.html
+++ b/to - do - list/index.html
@@ -13,6 +13,11 @@
             <input type="text" id="task-input" placeholder="Adicione uma nova tarefa..." />
             <button id="add-task-button">Adicionar</button>
         </section>
+        <section class="task-list">
+            <ul id="tasks-ul">
+                <!-- Tarefas serão adicionadas aqui dinamicamente -->
+            </ul>
+        </section>
     </main>
 
     <script src="js/script.js" defer></script>
